# gerador-query-darm

./: .gitignore  DISTRIBUTION_GUIDE.md  Dockerfile  FORMATO_SIMPLIFICADO.md  FUNCIONALIDADES_OCR.md  GUIA_EXECUTAVEL.md  LICENSE  MANIFEST.in  Processador-DARM.iss  README.md  README_Python.md  RESUMO_DISTRIBUICAO.md  RESUMO_INSTALADORES.md  RESUMO_OCR.md  VERSOES_SQL_DISPONIVEIS.md  build.py  build_executable.py  comparar_dados.py  config.py  criar_instalador.py  criar_instalador_avancado.py  darm_processor.py  debug_cd_receita.py  debug_cd_receita_simple.py  debug_inscricao.py  debug_sq_doc_duplicates.py  distribute.py  docker-compose.yml  exemplo_configuracao_ocr.py  exemplo_ocr.py  exemplo_uso.py  install.py  install_ocr.py  pyproject.toml  regenerate_consolidated.py  requirements.txt  setup.py  test_codigo_receita.py  test_controlm_compatibility.py  test_darm_processor.py  (+10 more)
Instalador/: EXEMPLO.txt  INSTALAR.bat  README.txt
Instalador-Portavel/: EXECUTAR.bat
darms/: .gitkeep
inserts/: .gitkeep
